@@ -13,6 +13,10 @@ function [trainpaa, testpaa] = paa(train, test, options)
 %       paa::num segments       (default: 10)
 %       paa::segment size       (default: 0)
 %
+%   It is possible to simultaneously specify "paa::num segments" and
+%   "paa::segment size". However, this is deprecated since version 0.11.9.
+%   In future versions, specifying both options will raise an error.
+%
 %   The option "paa::segment size" takes precedence on "paa::num segments".
 %   If "paa::segment size" is different than zero, then the number of
 %   segments will be calculated with from the specified segment size,
@@ -25,6 +29,9 @@ if ~exist('options', 'var')
     else
         options = opts.empty;
     end
+end
+if opts.has(options, 'paa::num segments') && opts.has(options, 'paa::segment size')
+    warning('transform:paa', 'Specifying both "paa::num segments" and "paa::segment size" is deprecated.');
 end
 numseg = opts.get(options, 'paa::num segments', 10);
 segsize = opts.get(options, 'paa::segment size', 0);
