@@ -6,6 +6,8 @@ TimeBox 0.11.9: planned
 - Deprecated options: "sax::cut function".
 - Deprecated functions: TRANSFORM.SAX.BELL and TRANSFORM.SAX.UNIF.
 - Minor bugfixes: number of arguments of MODELS.NN1DTW was incorrect.
+- Deprecated behavior: specifying both "paa::num segments" and
+  "paa::segment size" in TRANSFORM.PAA raises a warning.
 
 
 TimeBox 0.11.8: released 2016-Apr-21
